// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketListActions component should display options for agents assignations 1`] = `
<div
  className="d-none d-md-inline-flex align-items-center"
>
  <div
    className="d-inline-flex align-items-center"
  >
    <UncontrolledButtonDropdown
      className="mr-2"
      size="sm"
    >
      <Button
        color="secondary"
        disabled={false}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Close
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={false}
        type="button"
      />
      <DropdownMenu
        flip={true}
        right={true}
        tag="div"
      >
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          SET STATUS
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Open
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <Button
        color="secondary"
        disabled={false}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Assign to me
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={false}
        type="button"
      />
      <DropdownMenu
        flip={true}
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="mb-2"
          header={true}
          tag="button"
          toggle={true}
        >
          ASSIGN TO:
        </DropdownItem>
        <DropdownItem
          className="dropdown-item-input"
          tag="button"
          toggle={true}
        />
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          foo
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          bar
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          baz
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <span
            className="text-warning"
            style={
              Object {
                "textTransform": "none",
              }
            }
          >
            Clear assignee
          </span>
        </DropdownItem>
      </DropdownMenu>
    </ButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={false}
        type="button"
      >
        Add tag
      </DropdownToggle>
      <DropdownMenu
        disabled={false}
        flip={true}
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="mb-2"
          header={true}
          tag="button"
          toggle={true}
        >
          ADD TAG:
        </DropdownItem>
        <DropdownItem
          className="dropdown-item-input"
          tag="button"
          toggle={true}
        />
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
      </DropdownMenu>
    </ButtonDropdown>
    <UncontrolledButtonDropdown
      size="sm"
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={false}
        id="bulk-more-button"
        type="button"
      >
        More
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        right={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Apply macro
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          className="text-danger"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Delete
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <Popover
      delay={
        Object {
          "hide": 0,
          "show": 0,
        }
      }
      hideArrow={false}
      isOpen={false}
      placement="bottom"
      placementPrefix="bs-popover"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverHeader
        tag="h3"
      >
        Are you sure?
      </PopoverHeader>
      <PopoverBody
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          5
           
          ticket
          s
          ?
        </p>
        <Button
          autoFocus={true}
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverBody>
    </Popover>
    <Popover
      delay={
        Object {
          "hide": 0,
          "show": 0,
        }
      }
      hideArrow={false}
      isOpen={false}
      placement="bottom"
      placementPrefix="bs-popover"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverHeader
        tag="h3"
      >
        Are you sure?
      </PopoverHeader>
      <PopoverBody
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          5
           
          ticket
          s
           forever?
        </p>
        <Button
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverBody>
    </Popover>
  </div>
</div>
`;

exports[`TicketListActions component should display special actions for trash view 1`] = `
<div
  className="d-none d-md-inline-flex align-items-center"
>
  <div
    className="d-inline-flex align-items-center"
  >
    <UncontrolledButtonDropdown
      className="mr-2"
      size="sm"
    >
      <Button
        color="secondary"
        disabled={true}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Close
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={true}
        type="button"
      />
      <DropdownMenu
        flip={true}
        right={true}
        tag="div"
      >
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          SET STATUS
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Open
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <Button
        color="secondary"
        disabled={true}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Assign to me
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={true}
        type="button"
      />
      <DropdownMenu
        flip={true}
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="mb-2"
          header={true}
          tag="button"
          toggle={true}
        >
          ASSIGN TO:
        </DropdownItem>
        <DropdownItem
          className="dropdown-item-input"
          tag="button"
          toggle={true}
        />
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          Could not find any agent
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <span
            className="text-warning"
            style={
              Object {
                "textTransform": "none",
              }
            }
          >
            Clear assignee
          </span>
        </DropdownItem>
      </DropdownMenu>
    </ButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={true}
        type="button"
      >
        Add tag
      </DropdownToggle>
      <DropdownMenu
        disabled={true}
        flip={true}
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="mb-2"
          header={true}
          tag="button"
          toggle={true}
        >
          ADD TAG:
        </DropdownItem>
        <DropdownItem
          className="dropdown-item-input"
          tag="button"
          toggle={true}
        />
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
      </DropdownMenu>
    </ButtonDropdown>
    <UncontrolledButtonDropdown
      size="sm"
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={true}
        id="bulk-more-button"
        type="button"
      >
        More
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        right={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Apply macro
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Undelete
        </DropdownItem>
        <DropdownItem
          className="text-danger"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Delete forever
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <Popover
      delay={
        Object {
          "hide": 0,
          "show": 0,
        }
      }
      hideArrow={false}
      isOpen={false}
      placement="bottom"
      placementPrefix="bs-popover"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverHeader
        tag="h3"
      >
        Are you sure?
      </PopoverHeader>
      <PopoverBody
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          0
           
          ticket
          ?
        </p>
        <Button
          autoFocus={true}
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverBody>
    </Popover>
    <Popover
      delay={
        Object {
          "hide": 0,
          "show": 0,
        }
      }
      hideArrow={false}
      isOpen={false}
      placement="bottom"
      placementPrefix="bs-popover"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverHeader
        tag="h3"
      >
        Are you sure?
      </PopoverHeader>
      <PopoverBody
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          0
           
          ticket
           forever?
        </p>
        <Button
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverBody>
    </Popover>
  </div>
</div>
`;

exports[`TicketListActions component should display when nothing is selected 1`] = `
<div
  className="d-none d-md-inline-flex align-items-center"
>
  <div
    className="d-inline-flex align-items-center"
  >
    <UncontrolledButtonDropdown
      className="mr-2"
      size="sm"
    >
      <Button
        color="secondary"
        disabled={true}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Close
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={true}
        type="button"
      />
      <DropdownMenu
        flip={true}
        right={true}
        tag="div"
      >
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          SET STATUS
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Open
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <Button
        color="secondary"
        disabled={true}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Assign to me
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={true}
        type="button"
      />
      <DropdownMenu
        flip={true}
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="mb-2"
          header={true}
          tag="button"
          toggle={true}
        >
          ASSIGN TO:
        </DropdownItem>
        <DropdownItem
          className="dropdown-item-input"
          tag="button"
          toggle={true}
        />
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          Could not find any agent
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <span
            className="text-warning"
            style={
              Object {
                "textTransform": "none",
              }
            }
          >
            Clear assignee
          </span>
        </DropdownItem>
      </DropdownMenu>
    </ButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={true}
        type="button"
      >
        Add tag
      </DropdownToggle>
      <DropdownMenu
        disabled={true}
        flip={true}
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="mb-2"
          header={true}
          tag="button"
          toggle={true}
        >
          ADD TAG:
        </DropdownItem>
        <DropdownItem
          className="dropdown-item-input"
          tag="button"
          toggle={true}
        />
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
      </DropdownMenu>
    </ButtonDropdown>
    <UncontrolledButtonDropdown
      size="sm"
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={true}
        id="bulk-more-button"
        type="button"
      >
        More
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        right={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Apply macro
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          className="text-danger"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Delete
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <Popover
      delay={
        Object {
          "hide": 0,
          "show": 0,
        }
      }
      hideArrow={false}
      isOpen={false}
      placement="bottom"
      placementPrefix="bs-popover"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverHeader
        tag="h3"
      >
        Are you sure?
      </PopoverHeader>
      <PopoverBody
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          0
           
          ticket
          ?
        </p>
        <Button
          autoFocus={true}
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverBody>
    </Popover>
    <Popover
      delay={
        Object {
          "hide": 0,
          "show": 0,
        }
      }
      hideArrow={false}
      isOpen={false}
      placement="bottom"
      placementPrefix="bs-popover"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverHeader
        tag="h3"
      >
        Are you sure?
      </PopoverHeader>
      <PopoverBody
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          0
           
          ticket
           forever?
        </p>
        <Button
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverBody>
    </Popover>
  </div>
</div>
`;

exports[`TicketListActions component should display when some tickets are selected 1`] = `
<div
  className="d-none d-md-inline-flex align-items-center"
>
  <div
    className="d-inline-flex align-items-center"
  >
    <UncontrolledButtonDropdown
      className="mr-2"
      size="sm"
    >
      <Button
        color="secondary"
        disabled={false}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Close
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={false}
        type="button"
      />
      <DropdownMenu
        flip={true}
        right={true}
        tag="div"
      >
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          SET STATUS
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Open
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <Button
        color="secondary"
        disabled={false}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Assign to me
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={false}
        type="button"
      />
      <DropdownMenu
        flip={true}
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="mb-2"
          header={true}
          tag="button"
          toggle={true}
        >
          ASSIGN TO:
        </DropdownItem>
        <DropdownItem
          className="dropdown-item-input"
          tag="button"
          toggle={true}
        />
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          Could not find any agent
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <span
            className="text-warning"
            style={
              Object {
                "textTransform": "none",
              }
            }
          >
            Clear assignee
          </span>
        </DropdownItem>
      </DropdownMenu>
    </ButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={false}
        type="button"
      >
        Add tag
      </DropdownToggle>
      <DropdownMenu
        disabled={false}
        flip={true}
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="mb-2"
          header={true}
          tag="button"
          toggle={true}
        >
          ADD TAG:
        </DropdownItem>
        <DropdownItem
          className="dropdown-item-input"
          tag="button"
          toggle={true}
        />
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
      </DropdownMenu>
    </ButtonDropdown>
    <UncontrolledButtonDropdown
      size="sm"
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        disabled={false}
        id="bulk-more-button"
        type="button"
      >
        More
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        right={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Apply macro
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          className="text-danger"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Delete
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <Popover
      delay={
        Object {
          "hide": 0,
          "show": 0,
        }
      }
      hideArrow={false}
      isOpen={false}
      placement="bottom"
      placementPrefix="bs-popover"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverHeader
        tag="h3"
      >
        Are you sure?
      </PopoverHeader>
      <PopoverBody
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          5
           
          ticket
          s
          ?
        </p>
        <Button
          autoFocus={true}
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverBody>
    </Popover>
    <Popover
      delay={
        Object {
          "hide": 0,
          "show": 0,
        }
      }
      hideArrow={false}
      isOpen={false}
      placement="bottom"
      placementPrefix="bs-popover"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverHeader
        tag="h3"
      >
        Are you sure?
      </PopoverHeader>
      <PopoverBody
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          5
           
          ticket
          s
           forever?
        </p>
        <Button
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverBody>
    </Popover>
  </div>
</div>
`;
